--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rusty Lake</title>
-    <link rel="shortcut icon" href="imagenes/cubitp.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./imagenes/cubitp.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="rustylake.css" />
     <script
       src="https://kit.fontawesome.com/c0b8dfb22c.js"
@@ -20,7 +24,7 @@
       </ul>
     </nav>
     <section id="welcome-section" class="section1">
-      <img id="cube" src="/imagenes/cubitp.png" alt="cube logo" />
+      <img id="cube" src="./imagenes/cubitp.png" alt="cube logo" />
       <h1>We are Rusty Lake</h1>
       <h3 class="subtitle">
         Rusty Lake is both the name of our indie game studio<br />and the eerie
@@ -38,7 +42,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/thePastWithin.jpg"
+            src="./imagenes/thePastWithin.jpg"
             alt="The Past Within image"
             class="gallery-game"
           />
@@ -50,7 +54,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/cubeEscapeCollection.jpg"
+            src="-/imagenes/cubeEscapeCollection.jpg"
             alt="Cube Escape Collection image"
             class="gallery-game"
           />
@@ -62,7 +66,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/samsaraRoom.jpg"
+            src="-/imagenes/samsaraRoom.jpg"
             alt="Samsara Room image"
             class="gallery-game"
           />
@@ -74,7 +78,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/theWhiteDoor.jpg"
+            src="./imagenes/theWhiteDoor.jpg"
             alt="The White Door image"
             class="gallery-game"
           />
@@ -86,7 +90,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/cubeEscapeParadox.jpg"
+            src="./imagenes/cubeEscapeParadox.jpg"
             alt="Cube Escape: Paradox image"
             class="gallery-game"
           />
@@ -98,7 +102,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/rustyLakeParadise.jpg"
+            src="./imagenes/rustyLakeParadise.jpg"
             alt="Rusty Lake Paradise image"
             class="gallery-game"
           />
@@ -110,7 +114,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/cubeEscapeTheCave.PNG"
+            src="./imagenes/cubeEscapeTheCave.PNG"
             alt="Cube Escape: The Cave image"
             class="gallery-game"
           />
@@ -122,7 +126,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/rustyLakeRoots.jpg"
+            src="./imagenes/rustyLakeRoots.jpg"
             alt="Rusty Lake: Roots image"
             class="gallery-game"
           />
@@ -134,7 +138,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/cubeEscapeTheatre.png"
+            src="./imagenes/cubeEscapeTheatre.png"
             alt="Cube Escape: Theatre image"
             class="gallery-game"
           />
@@ -146,7 +150,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/cubeEscapeBirthday.PNG"
+            src="./imagenes/cubeEscapeBirthday.PNG"
             alt="Cube Escape: Birthday image"
             class="gallery-game"
           />
@@ -158,7 +162,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/rustyLakeHotel.jpg"
+            src="./imagenes/rustyLakeHotel.jpg"
             alt="Rusty Lake Hotel image"
             class="gallery-game"
           />
@@ -170,7 +174,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/cubeEscapeTheMill.jpg"
+            src="./imagenes/cubeEscapeTheMill.jpg"
             alt="Cube Escape: The Mill image"
             class="gallery-game"
           />
@@ -182,7 +186,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/cubeEscapeCase23.png"
+            src="./imagenes/cubeEscapeCase23.png"
             alt="Cube Escape: Case 23 image"
             class="gallery-game"
           />
@@ -194,7 +198,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/cubeEscapeHarveysBox.PNG"
+            src="./imagenes/cubeEscapeHarveysBox.PNG"
             alt="Cube Escape: Harvey's Box image"
             class="gallery-game"
           />
@@ -206,7 +210,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/cubeEscapeArles.jpg"
+            src="./imagenes/cubeEscapeArles.jpg"
             alt="Cube Escape: Arles image"
             class="gallery-game"
           />
@@ -218,7 +222,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/cubeEscapeTheLake.jpg"
+            src="./imagenes/cubeEscapeTheLake.jpg"
             alt="Cube Escape: The Lake image"
             class="gallery-game"
           />
@@ -230,7 +234,7 @@
           class="game project-tile"
         >
           <img
-            src="/imagenes/cubeEscapeSeasons.jpg"
+            src="./imagenes/cubeEscapeSeasons.jpg"
             alt="Cube Escape: Seasons image"
             class="gallery-game"
           />
