--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           class="game project-tile"
         >
           <img
-            src="-/imagenes/cubeEscapeCollection.jpg"
+            src="./imagenes/cubeEscapeCollection.jpg"
             alt="Cube Escape Collection image"
             class="gallery-game"
           />
@@ -66,7 +66,7 @@
           class="game project-tile"
         >
           <img
-            src="-/imagenes/samsaraRoom.jpg"
+            src="./imagenes/samsaraRoom.jpg"
             alt="Samsara Room image"
             class="gallery-game"
           />
